Preparation method improved

--- a/example.html
+++ b/example.html
@@ -35,14 +35,6 @@
             padding: 30px 0;
             font-size: 30px;
         }
-        .offer{
-            padding: 30px;
-            margin-bottom: 10px;
-            border: 1px solid #e3e6e8;
-            border-radius: 3px;
-            box-shadow: 0 1px 4px rgba(43,50,75,.05);
-            color: #697483;
-        }
         .btn{
             display: inline-block;
             padding: 10px 30px;
@@ -70,15 +62,9 @@
 
 <body>
 
-    <!-- Subscribe offer block. Can be wrapped into hide-cookie checkup -->
-    <div class="offer hide" id="pushOffer">
-        Wow! Such pushes, much notifictions!
-        <div class="btn fl_r" id="pushOfferBtn">Subscribe</div>
-    </div>
-
     <header>
         <h1>Emoji parser example</h1>
-        <a href="">/doc</a>
+        <a href="https://github.com/neSpecc/emoji-parser">/doc</a>
     </header>
     <div class="content js-emoji-included">
         😏 🏄
@@ -99,7 +85,7 @@
     *
     * USAGE
     *
-    * 1) Add class 'js-emoji-included' to the Element where Emoji may be included
+    * 1) Add class 'js-emoji-included' to Elements where Emoji may be included
     * 2) Fire Emoji.parse()
     *
     */
