Charset rule added

--- a/example.html
+++ b/example.html
@@ -55,7 +55,7 @@
 
     </style>
 
-    <link rel="manifest" href="gcm-manifest.json">
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <title>Emoji parser example</title>
 
 </head>
